--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [
     "france",
     "codes postaux",
-    "open data"
+    "open data",
+    "postal code",
+    "French"
   ],
   "author": "Jérôme Desboeufs <jerome.desboeufs@gmail.com>",
   "license": "MIT",
