--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/sgmap/codes-postaux",
   "scripts": {
     "prepublish": "node prepublish.js",
+    "test": "node test.js",
     "postinstall": "node postinstall.js"
   },
   "dependencies": {
