--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "prepublish": "node prepublish.js",
     "test": "node test.js",
+    "preinstall": "node prepublish.js",
     "postinstall": "node postinstall.js"
   },
   "dependencies": {
