--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codes-postaux",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "French postal codes API for Node.js",
   "repository": {
     "type": "git",
@@ -19,16 +19,14 @@
     "url": "https://github.com/sgmap/codes-postaux/issues"
   },
   "homepage": "https://github.com/sgmap/codes-postaux",
+  "files": [
+    "LICENSE.MIT.txt",
+    "communes2016.json.gz",
+    "postinstall.js",
+    "index.js"
+  ],
   "scripts": {
-    "prepublish": "node prepublish.js",
     "test": "node test.js",
     "postinstall": "node postinstall.js"
-  },
-  "dependencies": {
-    "lodash": ">= 2.0 <4.0"
-  },
-  "devDependencies": {
-    "JSONStream": "^0.9.0",
-    "csv-parse": "^0.1.1"
   }
 }
