Rely on constant filename communes.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/sgmap/codes-postaux",
   "files": [
     "LICENSE.MIT.txt",
-    "communes2016.json.gz",
+    "communes.json.gz",
     "postinstall.js",
     "index.js"
   ],
