--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "test": "node test.js",
+    "prepublish": "./prepublish.sh",
     "postinstall": "node postinstall.js"
   }
 }
