--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
   "scripts": {
     "lint": "xo",
     "build": "node build",
-    "prepare": "node prepublish.js",
+    "prepare": "node build",
     "test": "node test.js"
   },
   "dependencies": {},
   "devDependencies": {
-    "JSONStream": "^1.1.2",
-    "csv-parse": "^1.1.1",
     "csv-parser": "^1.12.0",
     "decompress": "^4.2.0",
     "get-stream": "^3.0.0",
