Only run build script on prepublish

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "lint": "xo",
     "build": "node build",
-    "prepare": "node build",
+    "prepublishOnly": "node build",
     "test": "node test.js"
   },
   "dependencies": {},
