--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "lint": "xo",
     "build": "node build",
     "prepublishOnly": "node build",
-    "test": "node test.js"
+    "test": "ava"
   },
   "dependencies": {},
   "devDependencies": {
+    "ava": "^0.25.0",
     "csv-parser": "^1.12.0",
     "decompress": "^4.2.0",
     "get-stream": "^3.0.0",
