--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/etalab/codes-postaux",
   "files": [
     "codes-postaux.json",
-    "index.js"
+    "codes-postaux-full.json",
+    "index.js",
+    "full.js"
   ],
   "scripts": {
     "lint": "xo",
@@ -29,14 +31,15 @@
     "prepublishOnly": "node build",
     "test": "ava"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.5"
+  },
   "devDependencies": {
     "ava": "^0.25.0",
     "csv-parser": "^1.12.0",
     "decompress": "^4.2.0",
     "get-stream": "^3.0.0",
     "iconv-lite": "^0.4.19",
-    "lodash": "^4.17.5",
     "pumpify": "^1.4.0",
     "split2": "^2.2.0",
     "superagent": "^3.8.2",
