--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "decompress": "^4.2.0",
     "get-stream": "^3.0.0",
     "iconv-lite": "^0.4.19",
+    "into-stream": "^4.0.0",
     "pumpify": "^1.4.0",
     "split2": "^2.2.0",
     "superagent": "^3.8.2",
