--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
       ],
       "unicorn/prefer-module": "off",
       "unicorn/prefer-string-slice": "off",
+      "unicorn/prefer-top-level-await": "off",
       "import/extensions": "off",
       "node/prefer-global/process": "off"
     }
